<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EncNotes</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Notas Encriptadas</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnEditar">Editar</string>
    <string name="btnNuevo">Nuevo</string>
    <string name="title_activity_act_nueva_nota">Crear/Editar Nota</string>
    <string name="strGuardar">Guardar</string>
    <string name="strInsertaTitulo">Titulo</string>
    <string name="strNuevaNota">Escribe algo..</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnBuscarNota">Buscar Notas ..</string>
    <string name="strTituloEliminar">Confirmar Eliminación ..</string>
    <string name="strMensajeEliminar">¿Realmente desea eliminar esta nota?</string>
    <string name="strSi">SI</string>
    <string name="strNO">NO</string>
    <string name="strAceptar">Aceptar</string>
    <string name="strTituloError">Error</string>
    <string name="strContext">Error</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="strEmail">Email</string>
    <string name="strPassword">Contraseña</string>
    <string name="strLogin">Ingresar</string>
    <string name="strforgetpassword">¿Olvidaste tu Contraseña?</string>
    <string name="strRegistrarCuenta">¿No tienes una cuenta? Registrate aqui</string>
    <string name="title_activity_act_registrar_usuario">ActRegistrarUsuario</string>
    <string name="strFirstName">Nombres</string>
    <string name="strApellidos">Apellidos</string>
    <string name="strPasswordAgain">Repetir Contraseña</string>
    <string name="strCrearUsuario">Registrar Nueva Cuenta</string>

</resources>