<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strGuardar" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancelar" />

        <Button
            android:id="@+id/btn_ann_eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEliminar" />

    </LinearLayout>

    <EditText
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/strInsertaTitulo" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtTexto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/strNuevaNota"
        android:inputType="textMultiLine" />

</LinearLayout>
